# veto-agents

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI.md  HARD_STOP_V1.md  LICENSE  PRINCIPLES.md  README.md  SECURITY.md  install.sh  pyproject.toml
.github/workflows/: publish.yml
agents/groups/: DEPLOY.md  Dockerfile  SPEC.md  USAGE.md
agents/inbox/: SPEC.md
agents/media/: SPEC.md
agents/research/: SPEC.md
docs/: MCP.md  SETUP.md
src/veto_agents/: __init__.py  auth.py  auth_creds.py  auth_gate.py  banner.py  cli.py  config.py  credentials.py  funding.py  llm_providers.py  mcp_server.py  register.py  registry.py  safe_tx.py  structured_llm.py  veto_client.py  wallet_setup.py  wallet_view.py
src/veto_agents/agents/adbuyer/: README.md  __init__.py  agent.py  controller.py  meta_env.py  policy.yaml
src/veto_agents/agents/adbuyer/creative/: README.md  __init__.py  brand.py  creds.py  director.py  gate.py  policy.yaml  studio.py  types.py
src/veto_agents/agents/adbuyer/creative/providers/: __init__.py  elevenlabs_voice.py  fal_image.py  higgsfield_video.py  openai_image.py
src/veto_agents/agents/adbuyer/tools/: meta_ads.py  mock_meta.py  sim_meta.py
src/veto_agents/agents/groups/: __init__.py  agent.py  policy.yaml
src/veto_agents/agents/inbox/: __init__.py  agent.py
src/veto_agents/agents/media/: __init__.py  agent.py  policy.yaml
src/veto_agents/agents/media/tools/: fal_image.py  replicate_image.py
src/veto_agents/agents/research/: __init__.py  agent.py
src/veto_agents/skills/veto-media-buyer/: SKILL.md
tests/: test_brand.py  test_safe_tx.py
tests/sim/: harness.py
