[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "veto-agents"
version = "0.0.7"
description = "AI agents that pay for things on your behalf, with the safety built in. Hermes-core, governed by Veto."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Investech Global LLC", email = "tomer@veto-ai.com" },
]
keywords = ["ai", "agents", "veto", "hermes", "agent-payments", "x402", "policy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "platformdirs>=4.0",
    "qrcode>=7.4",
]

[project.optional-dependencies]
hermes = ["hermes-agent>=0.2.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.6"]

[project.urls]
Homepage = "https://veto-ai.com"
Repository = "https://github.com/veto-protocol/veto-agents"
Documentation = "https://github.com/veto-protocol/veto-agents#readme"

[project.scripts]
veto-agents = "veto_agents.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/veto_agents"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]
